Use Map.ofEntries() for building map